--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,19 @@
 [versions]
-indra = "3.1.1"
-kotlin = "1.8.22"
-spotless = "6.19.0"
-dokka = "1.8.20"
-klam = "0.4.0"
+indra = "3.1.3"
+kotlin = "2.1.0"
+dokka = "2.0.0"
+klam = "0.4.1"
 configurate = "4.1.2"
 alexandria = "0.1.2-SNAPSHOT"
 rapier = "0.2.1-SNAPSHOT"
 
-paper = "1.19.4"
-
-fabric = "1.20.1"
-fabric-loader = "0.14.21"
-fabric-api = "0.84.0+1.20.1"
-fabric-language-kotlin = "1.9.5+kotlin.1.8.22"
+paper = "1.21.4"
 
 [libraries]
 indra-common = { group = "net.kyori", name = "indra-common", version.ref = "indra" }
 indra-publishing-sonatype = { group = "net.kyori", name = "indra-publishing-sonatype", version.ref = "indra" }
 kotlin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin" }
-spotless = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version.ref = "spotless" }
 dokka = { group = "org.jetbrains.dokka", name = "dokka-gradle-plugin", version.ref = "dokka" }
 klam = { group = "io.github.aecsocket", name = "klam", version.ref = "klam" }
 configurate-core = { group = "org.spongepowered", name = "configurate-core", version.ref = "configurate" }
@@ -32,13 +25,8 @@ rapier-macos-x86 = { group = "io.github.aecsocket", name = "rapier-java-dim3-f64
 alexandria-api = { group = "io.github.aecsocket", name = "alexandria-api", version.ref = "alexandria" }
 alexandria-common = { group = "io.github.aecsocket", name = "alexandria-common", version.ref = "alexandria" }
 alexandria-paper = { group = "io.github.aecsocket", name = "alexandria-paper", version.ref = "alexandria" }
-alexandria-fabric = { group = "io.github.aecsocket", name = "alexandria-fabric", version.ref = "alexandria" }
-fabric-loader = { group = "net.fabricmc", name = "fabric-loader", version.ref = "fabric-loader" }
-fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.ref = "fabric-api" }
-fabric-language-kotlin = { group = "net.fabricmc", name = "fabric-language-kotlin", version.ref = "fabric-language-kotlin" }
 
 [plugins]
-shadow = { id = "com.github.johnrengelman.shadow", version = "8.1.1" }
-paperweight-userdev = { id = "io.papermc.paperweight.userdev", version = "1.5.6-SNAPSHOT" }
-run-paper = { id = "xyz.jpenilla.run-paper", version = "2.0.1" }
-fabric-loom = { id = "fabric-loom", version = "1.2-SNAPSHOT" }
+shadow = { id = "com.gradleup.shadow", version = "9.0.0-beta4" }
+paperweight-userdev = { id = "io.papermc.paperweight.userdev", version = "2.0.0-beta.8" }
+run-paper = { id = "xyz.jpenilla.run-paper", version = "2.3.1" }
